--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -5,4 +5,8 @@
     <%= f.label :first_name %><br>
     <%= f.text_field :first_name %>
   </p>
+  <p>
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name %>
+  </p>
 <% end %>
