--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -9,4 +9,8 @@
     <%= f.label :last_name %><br>
     <%= f.text_field :last_name %>
   </p>
+  <p>
+    <%= f.label :homepage %><br>
+    <%= f.text_field :homepage %>
+  </p>
 <% end %>
