new author page displays submit button fix #6

--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -13,4 +13,7 @@
     <%= f.label :homepage %><br>
     <%= f.text_field :homepage %>
   </p>
+  <p>
+    <%= f.submit "Create Author" %><br>
+  </p>
 <% end %>
