--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Author</h1>
 
-<%= form_for :author do |f| %>
+<%= form_for :author, url: authors_path do |f| %>
   <p>
     <%= f.label :first_name %><br>
     <%= f.text_field :first_name %>
