--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,3 +1,14 @@
+<table>
+  <tr>
+    <th>Name</th>
+	<th>Homepage</th>
+  </tr>
+
 <% @authors.each do |author| %>
-	<%= author.name %>
+  <tr>
+    <th><%= author.name %></th>
+	<th><%= author.homepage %></th>
+  </tr>
 <% end %>
+
+</table>
