renamed link to show author from author index page

--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -9,7 +9,7 @@
   <tr>
     <th><%= author.name %></th>
 	<th><%= author.homepage %></th>
-	<th><a href="/authors/<%= author.id %>">show</a></th>
+	<th><a href="/authors/<%= author.id %>">Show</a></th>
   </tr>
 <% end %>
 
