--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -3,6 +3,7 @@
     <th>Name</th>
 	<th>Homepage</th>
 	<th>Detail View</th>
+	<th>Edit Author</th>
   </tr>
 
 <% @authors.each do |author| %>
@@ -10,6 +11,7 @@
     <th><%= author.name %></th>
 	<th><%= author.homepage %></th>
 	<th><a href="/authors/<%= author.id %>">Show</a></th>
+	<th><a href="/authors/<%= author.id %>/edit">Edit</a></th>
   </tr>
 <% end %>
 
