--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,17 +1,21 @@
+<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
 <table>
   <tr>
     <th>Name</th>
 	<th>Homepage</th>
 	<th>Detail View</th>
 	<th>Edit Author</th>
+	<th>Delete Author</th>
   </tr>
 
 <% @authors.each do |author| %>
   <tr>
-    <th><%= author.name %></th>
-	<th><%= author.homepage %></th>
-	<th><a href="/authors/<%= author.id %>">Show</a></th>
-	<th><a href="/authors/<%= author.id %>/edit">Edit</a></th>
+    <td><%= author.name %></td>
+	<td><%= author.homepage %></td>
+	<td><%= link_to 'Show', author_path(author) %></td>
+	<td><%= link_to 'Edit', edit_author_path(author) %></td>
+	<td><%= link_to 'Destroy', author_path(author), method: :delete %></td>
   </tr>
 <% end %>
 
