added paper edit page fix #47

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -1,3 +1,3 @@
-Title: <%= @paper.title =%>
-Venue: <%= @paper.venue =%>
-Year: <%= @paper.year =%>
+Title: <%= @paper.title =%><br>
+Venue: <%= @paper.venue =%><br>
+Year: <%= @paper.year =%><br>
