--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,3 +1,3 @@
-First name: <%= @author.first_name =%>
-Last name: <%= @author.last_name =%>
-Homepage: <%= @author.homepage =%>
+First name: <%= @author.first_name =%><br>
+Last name: <%= @author.last_name =%><br>
+Homepage: <%= @author.homepage =%><br>
