--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -16,8 +16,8 @@
 	<td><%= paper.venue %></td>
 	<td><%= paper.year %></td>
 	<td><%= link_to 'Show', paper_path(paper) %></td>
-	<!--<td><%= link_to 'Edit', edit_paper_path(paper) %></td>
-	<td><%= link_to 'Destroy', paper_path(paper), method: :delete %></td> -->
+	<td><%= link_to 'Edit', edit_paper_path(paper) %></td>
+	<!-- <td><%= link_to 'Destroy', paper_path(paper), method: :delete %></td> -->
   </tr>
 <% end %>
 
