added dropdown menus for authors in paper edit page fix #58

--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -21,6 +21,14 @@
     <%= f.number_field :year %>
   </p>
   <p>
+    <% (1..5).each do |i| %>
+      <%= f.label "Author #{i}:", for: "paper_author_id_#{i}" %>
+	  <%= f.collection_select :author_ids, @authors, :id, :name,
+          {selected: @paper.author_ids[i], include_blank: '(none)'},
+		  {name: "paper[author_ids][]", id: "paper_author_id_#{i}"} %>
+    <% end %>
+  </p>
+  <p>
     <%= f.submit "Edit Paper" %><br>
   </p>
 
