--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -24,7 +24,7 @@
     <% (1..5).each do |i| %>
       <%= f.label "Author #{i}:", for: "paper_author_id_#{i}" %>
 	  <%= f.collection_select :author_ids, @authors, :id, :name,
-          {selected: @paper.author_ids[i], include_blank: '(none)'},
+          {selected: @paper.author_ids[i - 1], include_blank: '(none)'},
 		  {name: "paper[author_ids][]", id: "paper_author_id_#{i}"} %>
     <% end %>
   </p>
